--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "firebase": "^9.8.3",
-    "gh-pages": "^5.0.0",
     "gsap-trial": "^3.9.0",
     "leaflet": "^1.7.1",
     "loaders.css": "^0.1.2",
@@ -29,7 +28,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -52,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
